# jupyterlab-prodigy

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  azure-pipelines.yml  install.json  package.json  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yml
binder/: requirements.txt
jupyterlab_prodigy/: __init__.py  _version.py
notebooks/: test.ipynb
src/: index.ts
static/: build_log.json  package.json
static/schemas/jupyterlab-prodigy/: package.json.orig  plugin.json
static/static/: lib_index_js.daaf3ef29e0b22794085.js  lib_index_js.daaf3ef29e0b22794085.js.map  remoteEntry.1f537dbb781e4df03c67.js  remoteEntry.1f537dbb781e4df03c67.js.map  style.js  style_index_css.83cb5dbf224393649a80.js  style_index_css.83cb5dbf224393649a80.js.map  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-313cda.1b2ddd576d3f4023dde4.js  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-313cda.1b2ddd576d3f4023dde4.js.map
style/: index.css
